# Private_PersonalLLM

./: .gitignore  README.md  env.yml  pyproject.toml  requirements.txt
PersonalLLM/data/: .env.example  README.md  gen_all_rewards.py  gen_all_rewards_conf.yaml  gen_pref_interaction_database.py  gen_rewards.py  gen_rewards_conf.yaml  meta_learning.py
PersonalLLM/eval/: README.md  eval.py  eval_conf.yaml  gen_score.py  sweep.py
PersonalLLM/eval/algorithms/: BaseAlgorithm.py  KShotICLAlgorithm.py  LookUpMetaLearnKShotICLAlgorithm.py  MetaLearnKShotICLAlgorithm.py  SelfKShotICLAlgorithm.py  ZeroShotAlgorithm.py
PersonalLLM/eval/scores/: all_scores.csv
PersonalLLM/paper/: make-arxiv.sh  setting1_plot_df.pkl  setting2_plot_df.pkl  visualize.ipynb
PersonalLLM/paper/arxiv-submission/: 01_dataset.tex  04_related_work.tex  05_discussion_limitations.tex  main.tex
PersonalLLM/paper/arxiv-submission/macros/: editing-macros.sty  statistics-macros-or.sty
PersonalLLM/paper/tex/: cite.bib  main.tex
PersonalLLM/paper/tex/arxiv/: bib.bib  cite.bib  main.tex  math_commands.tex
PersonalLLM/paper/tex/arxiv/macros/: editing-macros.sty  packages-iclr.sty  packages-or.sty  packages.sty  statistics-macros-iclr.sty  statistics-macros.sty
PersonalLLM/paper/tex/arxiv/sections/: 00_intro.tex  01_dataset.tex  02_analysis.tex  03_experiments.tex  05_discussion&limitations.tex  appendix.tex
PersonalLLM/paper/tex/sections/: 00_intro.tex  01_dataset.tex  02_analysis.tex  03_experiments.tex  04_related_work.tex  appendix.tex  interaction_model.tex
